syntax = "proto3";

package clientProfile;

message ClientProfileRequest {
  int32 id = 1;
}

message ClientProfileResponse {
  string name = 1;
  int32 age = 2;
}

service ClientProfileService {
  rpc GetClientProfileById(ClientProfileRequest) returns (ClientProfileResponse);
}
